--- a/src/components/AppHeader/Header/styles.module.scss
+++ b/src/components/AppHeader/Header/styles.module.scss
@@ -9,24 +9,36 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  height: 100%;
 }
 
 .logoContainer {
-  width: 20%;
+  width: 60%;
   display: flex;
   justify-content: center;
+  align-items: center;
   color: white;
+  height: 100%;
 }
+
+.navContainer {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #031318;
+  height: 100%;
+}
+
 .userContainer {
-  width: 20%;
+  width: 30%;
   display: flex;
   justify-content: center;
   color: white;
 }
 
 .navigationContainer {
-  width: 60%;
+  width: 70%;
   display: flex;
   justify-content: center;
 }
