--- a/src/components/AppHeader/NavigationLinks/styles.module.scss
+++ b/src/components/AppHeader/NavigationLinks/styles.module.scss
@@ -15,8 +15,8 @@
   background-color: none !important;
 
   .navigationLabel {
-    font-family: "Orbitron", sans-serif !important;
-    font-weight: 600 !important;
+    font-family: "Libre Baskerville", serif !important;
+    // font-weight: 600 !important;
     font-size: 14px;
     color: white;
     transition: all 0.3s;
