--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Russo+One&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
 body {
   margin: 0;
-  font-family: "Orbitron", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to right, #0c2627, #0e2424, #031318);
