--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right, #0c2627, #0e2424, #031318);
+  background: linear-gradient(to right, #2c2825, #0b0a09);
 }
 
 code {
