--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,9 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right, #2c2825, #0b0a09);
+  background: linear-gradient(to right bottom, #fff, rgb(202, 202, 202));
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Roboto", sans-serif;
 }
