new styles for navbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 .App {
-  height: 100vh;
   width: 100%;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Poppins", sans-serif;
 }
