--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 body {
   margin: 0;
-
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to right bottom, #fff, rgb(202, 202, 202));
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 code {
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
