--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 }
 
 .App {
+  height: 100vh;
   width: 100%;
   font-family: "Poppins", sans-serif;
+  background: linear-gradient(to right bottom, #fff, rgb(202, 202, 202));
+  background-repeat: no-repeat;
+  background-size: cover;
 }
