--- a/src/components/AppHeader/styles.module.scss
+++ b/src/components/AppHeader/styles.module.scss
@@ -2,7 +2,7 @@
   width: 90%;
   height: 100px;
   margin: 15px auto;
-  border-radius: 30px !important;
+  border-radius: 30px;
   display: flex;
   align-items: center;
 }
@@ -28,13 +28,13 @@
 }
 
 .mainTitle {
-  font-size: 22px !important;
-  font-weight: bold !important;
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .subTitle {
-  font-size: 14px !important;
-  letter-spacing: 5px !important;
+  font-size: 14px;
+  letter-spacing: 5px;
 }
 
 .navigationContainer {
