created route for create account

--- a/src/components/AppHeader/styles.module.scss
+++ b/src/components/AppHeader/styles.module.scss
@@ -30,11 +30,13 @@
 .mainTitle {
   font-size: 22px;
   font-weight: bold;
+  color: black;
 }
 
 .subTitle {
   font-size: 14px;
   letter-spacing: 5px;
+  color: black;
 }
 
 .navigationContainer {
