--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+  font-family: inherit;
+}
