created simple login functionality for app

--- a/src/components/IntroductionPage/styles.module.scss
+++ b/src/components/IntroductionPage/styles.module.scss
@@ -44,7 +44,7 @@
   font-size: 18px;
 
   &:hover {
-    color: inherit;
+    color: black;
     background-color: none;
     border: solid 1px black;
   }
