--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -1,26 +1,34 @@
-.createContainer {
+.loginContainer {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 90%;
   margin: 0 auto;
 }
 
-.titleContainer {
+.logintitle {
+  width: 100%;
   display: flex;
-  align-items: center;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+.loginLabel {
+  width: 90%;
+  font-family: inherit;
+  text-align: center;
+  color: #4f4537;
+  font-size: 32px;
 }
 
 .returnButton {
-  font-size: 14px;
-  height: 30px;
+  color: #4f4537;
   display: flex;
   align-items: center;
+  font-family: inherit;
   gap: 15px;
-  color: #4f4537;
-  justify-content: center;
-  cursor: pointer;
   padding: 5px;
-  transition: all 0.3s;
+  transition: all 0.5s;
+  cursor: pointer;
 
   &:hover {
     border-radius: 10px;
@@ -30,36 +38,28 @@
   }
 }
 
-.createTitle {
-  font-size: 32px;
-  font-family: inherit;
-  color: #4f4537;
-  width: 90%;
-  text-align: center;
-}
-
-.createForm {
+.loginForm {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  width: 100%;
-  align-items: center;
-  height: 80%;
   justify-content: center;
-}
-
-.textField {
   width: 50%;
+  height: 100%;
+  margin: 0 auto;
+  gap: 50px;
 }
 
 .submitButton {
   color: #4f4537;
-  font-family: inherit;
   outline: solid 1px rgba(0, 0, 0, 0.108);
+  width: 20%;
+  padding: 5px;
+  margin: 0 auto;
+  font-size: 18px;
+  font-family: inherit;
 
   &:hover {
+    background-color: #4f4537;
     outline: none;
     color: white;
-    background-color: #4f4537;
   }
 }
