--- a/src/components/DIalog/styles.module.scss
+++ b/src/components/DIalog/styles.module.scss
@@ -1,9 +1,11 @@
 .dialogContent {
   position: relative;
   width: 500px;
-  height: 300px;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .closeIcon {
@@ -14,4 +16,41 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  cursor: pointer;
+}
+
+.timing {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+
+  & > span {
+    width: 56px !important;
+    height: 56px !important;
+    color: #4f4537;
+  }
+}
+
+.succeedMessage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: #4f4537;
+  font-family: inherit;
+}
+
+.checkBox {
+  font-size: 45px;
+}
+
+.message {
+  font-size: 18px;
 }
